need to improve game experience clock, promotion selection, win/loss screen, fix quiet search
Signed-off-by: JoshuaMeyer1 <97538826+JoshuaMeyer1@users.noreply.github.com>